--- a/css/portal.css
+++ b/css/portal.css
@@ -44,7 +44,7 @@ a {
 
 a:hover {
     color: #141516;
-    background-color: ##8d9b6a;
+    background-color: #8d9b6a;
     text-decoration: none;
 }
 
