--- a/css/portal.css
+++ b/css/portal.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Libre+Baskerville&display=swap');
 
 html {
-    background-color: #887a7a;
+    background-color: #696a6d;
     font-family: 'Libre Baskerville', serif;
     font-size: 0.95em;
     line-height: 1.5em;
